fixed validation bugs

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -128,7 +128,7 @@
               aria-haspopup="true"
               aria-controls="menu1"
               class="item menu-button"
-              tabindex="=-1">
+              tabindex="-1">
               Fonts
             </button>
             <ul role="menu" id="menu1" aria-label="Font Family">
@@ -278,8 +278,8 @@
       </table>
     </section>
     <section>
-        <h3 id="kbd_label_2">Menu</h3>
-        <table aria-labelledby="kbd_label_2" class="def">
+        <h3 id="kbd_label_3">Menu</h3>
+        <table aria-labelledby="kbd_label_3" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -312,7 +312,9 @@
               </td>
             </tr>
             <tr>
-                <th><kbd>ESC</kbd>,<br><kbd>Left Arrow</kbd>,<br><kbd>Right Arrow</kbd></th>
+                <th>
+                  <kbd>ESC</kbd>,<br><kbd>Left Arrow</kbd>,<br><kbd>Right Arrow</kbd>
+                </th>
                 <td>
                   <ul>
                     <li>Close the menu.</li>
@@ -379,6 +381,7 @@
                 <li>All the buttons in the toolbar use the <code>button</code> element.</li>
                 <li>The default role of a <code>button</code> element is <q>button</q>.</li>
                 <li>Accessible name for each button comes from either the text content of the button or <code>aria-label</code> attribute.</li>
+              </ul>
             </td>
           </tr>
           <tr>
@@ -618,8 +621,8 @@
   <section>
     <h2>Javascript and CSS Source Code</h2>
     <ul>
-      <li>CSS: <a href="css/toolbar.css" type="tex/css">toolbar.css</a></li>
-      <li>CSS: <a href="css/menuButton.css" type="stylesheet">menuButton.css</a></li>
+      <li>CSS: <a href="css/toolbar.css" type="text/css">toolbar.css</a></li>
+      <li>CSS: <a href="css/menuButton.css" type="text/css">menuButton.css</a></li>
       <li>Javascript: <a href="js/FormatToolbar.js" type="text/javascript">FormatToolbar.js</a></li>
       <li>Javascript: <a href="js/FormatToolbarItem.js" type="text/javascript">FormatToolbarItem.js</a></li>
       <li>Javascript: <a href="js/FontMenuButton.js" type="text/javascript">FontMenuButton.js</a></li>
