--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1576,7 +1576,7 @@
 
       <section class="notoc">
         <h4>Examples</h4>
-        <p><a href="examples/link/link.html">Link Examples</a>: Link widgets constructed from HTML <code>span</code> and <code>div</code> elements.</p>
+        <p><a href="examples/link/link.html">Link Examples</a>: Link widgets constructed from HTML <code>span</code> and <code>img</code> elements.</p>
       </section>
 
       <section class="notoc">
