--- a/aria-practices.html
+++ b/aria-practices.html
@@ -547,14 +547,51 @@
     <section class="widget" id="carousel">
       <h3>Carousel (Image Rotator)</h3>
       <p>
-        A carousel is a composite widget containing a set of controls for pausing the rotation of images and navigating images.
-        The image often has additional related content in the form of text content and links.
-        A  <code>tablist</code> widget and a set of <code>button</code> widgets can be used to describe the carousel content, pause and restart automatic rotation and manually rotate through the images.
-        Each image is represented as a <code>tabpanel</code> and a <code>tablist</code> is used to control navigation to each item.
-        In addition to the tabs, a previous and next button are typically provided to allow navigation to the previous and next slide.
-        A button is used to stop the automatic rotationof the image for screen reader and other keyboard users.
-        When screen reader users move their review cursor to the image content and it automatically rotates, the content is removed from the accessibility tree and the review cursor typically moves to the beginning of the page, which is disorienting to users.
-        The set of controls should also be in a complementary landmark with an accessible name identifying the region as a carousel widget.
+        A carousel is a composite widget containing a set of controls for pausing the rotation of a set of slides consisting of an image often with descriptive content used for navigation to more detailed information related to the slide.
+
+        <section class="notoc">
+          <h4>Required Components</h4>
+
+          <dl>
+            <dt>Pause/Stop Rotation</dt>
+
+            <dd>A pause/stop slide rotation button is need on the page before the carousel to provide an opportunity for screen reader users to stop the slide rotation before they move their reading cursor into the rotating content.   If the reading cursor enters slide content and the slide is rotated, the content is removed from the accessibility tree and the reading cursor is typically moved by the screen reader to the beginning of the page.  This situation is disorienting to screen reader users, since they are not expecting the sudden change in reading context.</dd>
+
+            <dd>When any element in a slide receives keyboard focus, slide rotation should pause/stop.  This allows keyboard only users to navigate the content of the slide without keyboard focus suddenly disappearing when a slide rotates.</dd>
+
+            <dd>When the mouse cursor is over a slide the rotation should pause/stop to help people with visual impairments and cognitive disabilities to be able to read content without the content changing.</dd>
+
+            <dt>Next Image</dt>
+
+            <dd>A button is needed to manually move to the next slide.</dd>
+
+            <dd>The label of the button should indicate the content of the next panel (e.g. next slide: James Smith lecture) and/or position of the next panel in the set of panels (e.g. slide 3 of 6).</dd>
+
+            <dd>The next slide button should before the previous slide button and slide content, so that the changed slide content is after the buttons. </dd>
+
+            <dt>Previous Image</dt>
+
+            <dd>A button is needed to manually move the previous slide.</dd>
+
+            <dd>The label of the button should indicate the content of the next panel (e.g. next slide: James Smith lecture) and/or position of the next panel in the set of panels (e.g. slide 3 of 6).</dd>
+
+            <dd>The previous slide button should after the next slide button and before the slide content, so that the changed slide content is after the buttons.  </dd>
+
+          </dl>
+        </section>
+
+        <section class="notoc">
+          <h4>Optional Components</h4>
+
+          <dl>
+            <dt>Tablist Navigation</dt>
+
+            <dd>Some carousels have a set of clickable buttons indicating the number of slides in the carousel and clicking on the button makes the slide visible.   This type of interaction can be modeled as a <code>tablist</code> with the clickable buttons represented as <code>tab</code>s and the slides as <code>tabpanels</code>.</dd>
+
+            <dd>The accessible names for the <code>tab</code>s should describe the content of the slide (e.g. James Smith lecture).</dd>
+          </dl>
+        </section>
+
 
       <section class="notoc">
         <h4>Examples</h4>
@@ -562,7 +599,32 @@
       </section>
 
       <section class="notoc">
-        <h4>Keyboard Interaction</h4>
+        <h4>Optional Keyboard Interaction</h4>
+        <p>For the tab list:</p>
+        <ul>
+          <li>
+            <kbd>Tab</kbd>: When focus moves into the tab list, places focus on the active <code>tab</code> element .
+            When the tab list contains the focus, moves focus to the next element in the page tab sequence outside the tablist, which is typically either the first focusable element inside the tab panel or the tab panel itself.
+          </li>
+          <li>
+            <kbd>Left Arrow</kbd>: moves focus to the previous tab (i.e. image).
+            If focus is on the first tab, moves focus to the last tab.
+            Optionally, activates the newly focused tab (See note below).
+          </li>
+          <li>
+            <kbd>Right Arrow</kbd>: Moves focus to the next tab (i.e. image).
+            If focus is on the last tab element, moves focus to the first tab.
+            Optionally, activates the newly focused tab (See note below).
+          </li>
+          <li><kbd>Home</kbd> (Optional): Moves focus to the first tab (i.e. image).</li>
+          <li><kbd>End</kbd> (Optional): Moves focus to the last tab (i.e.. image).</li>
+        </ul>
+        <p>
+      </section>
+
+
+      <section class="notoc">
+        <h4>Optional Keyboard Interaction</h4>
         <p>For the tab list:</p>
         <ul>
           <li>
@@ -2044,9 +2106,9 @@
     <section class="widget" id="radiobutton">
       <h3>Radio Group</h3>
       <p>
-        A radio group is a set of checkable buttons, known as radio buttons, where no more than one of 
+        A radio group is a set of checkable buttons, known as radio buttons, where no more than one of
         the buttons can be checked at a time.
-        Some implementations may initialize the set with all buttons in the unchecked state in order to 
+        Some implementations may initialize the set with all buttons in the unchecked state in order to
         force the user to check one of the buttons before moving past a certain point in the workflow.
       </p>
 
@@ -2451,7 +2513,7 @@
               <li><kbd>End</kbd> (Optional): Moves focus to the last tab. Optionally, activates the newly focused tab (See note below).</li>
               <li><kbd>Shift + F10</kbd>: If the tab has an associated pop-up menu, opens the menu. </li>
               <li>
-                <kbd>Delete</kbd> (Optional): If deletion is allowed, deletes (closes) the current tab element and its associated tab panel, 
+                <kbd>Delete</kbd> (Optional): If deletion is allowed, deletes (closes) the current tab element and its associated tab panel,
                 sets focus on the tab following the tab that was closed, and optionally activates the newly focused tab. If there is not a tab that followed the tab that was deleted,
                 e.g., the deleted tab was the right-most tab in a left-to-right horizontal tab list,
                 sets focus on and optionally activates the tab that preceded the deleted tab.
@@ -2982,7 +3044,7 @@
         </ul>
         <p class="note">See <a href="#kbd_common_conventions"></a> for cut, copy, and paste key assignments.</p>
       </section>
-        
+
       <section id="treegrid_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
@@ -4584,7 +4646,7 @@
       <p>The following example grid uses <code>aria-sort</code> to indicate the rows are sorted from the highest "Quiz 2" score to the lowest "Quiz 2" score.</p>
       <pre>
         <code>
-          &lt;table role=&quot;grid&quot; aria-rowcount=&quot;463&quot; aria-colcount=&quot;13&quot; 
+          &lt;table role=&quot;grid&quot; aria-rowcount=&quot;463&quot; aria-colcount=&quot;13&quot;
             aria-label=&quot;Student grades for history 101&quot;&gt;
             &lt;thead&gt;
               &lt;tr aria-colindex=&quot;10&quot; aria-rowindex=&quot;1&quot;&gt;
@@ -4833,7 +4895,7 @@
               <li>Menu button example bug fixes</li>
               <li>Navigation menubar example bug fixes</li>
               <li>Radio group example styling</li>
-              <li>Tabs pattern, including labeling guidance</li> 
+              <li>Tabs pattern, including labeling guidance</li>
               <li>Tree view pattern, including multi-select guidance</li>
               <li>Tree view example bug fixes</li>
             </ul>
