clean up a few more spots

--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -210,7 +210,7 @@
               <th scope="row"><code>radiogroup</code></th>
               <td></td>
               <td><code>ul</code></td>
-              <td>Identifies the <code>div</code> element as a container for a group of <code>radio</code> buttons.</td>
+              <td>Identifies the element as a container for a group of <code>radio</code> buttons.</td>
             </tr>
             <tr>
               <td></td>
@@ -251,8 +251,8 @@
               <td><code>li</code></td>
               <td>
                 <ul>
-                  <li>Identifies the <code>div</code> element as an ARIA <code>radio</code> button.</li>
-                  <li>The accessible name is computed from the child text content of the <code>div</code> element.</li>
+                  <li>Identifies the element as an ARIA <code>radio</code> button.</li>
+                  <li>The accessible name is computed from the child text content of the element.</li>
                 </ul>
               </td>
             </tr>
