added items to toolbar

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -139,6 +139,24 @@
               <li role="menuitem" style="font-family: cursive">Cursive</li>
             </ul>
           </div>
+
+          <div class="group">
+            <input class="item spinbutton"
+                   type="number"
+                   tabindex="-1"
+                   role="spinbutton"
+                   size="3"
+                   value="14"
+                   min="8"
+                   max="40"
+                   step="2"
+                   style="width: 3em">
+          </div>
+
+          <div class="group">
+            <label><input class="item nightmode" type="checkbox" tabindex="-1"> Night Mode</label>
+            <a class="item link" href="tips.html" tabindex="-1">Tips</a>
+          </div>
       </div>
       <label for="textarea1" class="hidden">Text Sample</label><br>
       <textarea id="textarea1" rows="20" cols="80"
