--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -154,13 +154,13 @@
           </div>
 
           <div class="group">
-            <label><input class="item nightmode" type="checkbox" tabindex="-1"> Night Mode</label>
+            <label><input class="item nightmode" type="checkbox" tabindex="-1" aria-checked="false"> Night Mode</label>
             <a class="item link" href="tips.html" tabindex="-1">Tips</a>
           </div>
       </div>
       <label for="textarea1" class="hidden">Text Sample</label><br>
       <textarea id="textarea1" rows="20" cols="80"
-        style="font-size: medium; font-family: sans-serif"
+        style="font-family: sans-serif"
         >
         Four score and seven years ago our fathers brought forth on this continent a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal.
 
