fixing focus issues

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -150,7 +150,8 @@
                    min="8"
                    max="40"
                    step="2"
-                   style="width: 3em">
+                   style="width: 3em"
+                   title="Font size in points">
           </div>
 
           <div class="group">
