fixing focus issues

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -141,6 +141,7 @@
           </div>
 
           <div class="group">
+            <div class="input">
             <input class="item spinbutton"
                    type="number"
                    tabindex="-1"
@@ -151,11 +152,13 @@
                    max="40"
                    step="2"
                    style="width: 3em"
-                   title="Font size in points">
+                   aria-label="Font size in points">
+                   Pts
+            </div>
           </div>
 
           <div class="group">
-            <label><input class="item nightmode" type="checkbox" tabindex="-1" aria-checked="false"> Night Mode</label>
+            <label class="input"><input class="item nightmode" type="checkbox" tabindex="-1" aria-checked="false"> Night Mode</label>
             <a class="item link" href="tips.html" tabindex="-1">Tips</a>
           </div>
       </div>
