fixed link issues

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -166,7 +166,7 @@
 
           <div class="group">
             <label class="input"><input class="item nightmode" type="checkbox" tabindex="-1" aria-checked="false"> Night Mode</label>
-            <a class="item link" href="help.html" tabindex="-1">Help</a>
+            <a class="item link" href="help.html" tabindex="-1" title="Opens help document in a new window">Help</a>
           </div>
       </div>
       <label for="textarea1" class="hidden">Text Sample</label><br>
