spinbutton styling issues

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -153,12 +153,12 @@
               <span class="value">14pt</span>
               <span class="increase">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14">
-                  <polygon fill="#333" points="0,14 13,14 7,2"></polygon>
+                  <polygon class="increase" fill="#333" points="0,14 13,14 7,2"></polygon>
                 </svg>
               </span>
               <span class="decrease">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14">
-                  <polygon fill="#333" points="0,2 13,2 7,14"></polygon>
+                  <polygon class="decrease" fill="#333" points="0,2 13,2 7,14"></polygon>
                 </svg>
               </span>
             </div>
