Updated toolbar documentation

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -216,6 +216,7 @@
 
     <section>
       <h3 id="kbd_label_1">Toolbar</h3>
+      <p>The following keyboard commands apply to all controls in the toolbar.</p>
       <table aria-labelledby="kbd_label_1" class="def">
         <thead>
           <tr>
@@ -253,12 +254,6 @@
             </td>
           </tr>
           <tr>
-            <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
-            <td>
-              Activate the action associated with the toolbar item.
-            </td>
-          </tr>
-          <tr>
             <th><kbd>Home</kbd></th>
             <td>Moves focus to the first control.</td>
           </tr>
@@ -269,9 +264,52 @@
         </tbody>
       </table>
     </section>
+
     <section>
-      <h3 id="kbd_label_2">Menu Button</h3>
+      <h3 id="kbd_label_2">Toggle Button</h3>
+      <p>The <b>Bold</b>, <i>Italic</i>, <u>Underline</u> and the left, center and right justification buttons in the toolbar.</p>
       <table aria-labelledby="kbd_label_2" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
+            <td>
+              Toggle on/off the the action associated with the button.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h3 id="kbd_label_3">Button</h3>
+      <p>The cut, copy and paste button in the toolbar.</p>
+      <table aria-labelledby="kbd_label_3" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
+            <td>
+              Activate the action associated with the button.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h3 id="kbd_label_4">Menu Button</h3>
+      <table aria-labelledby="kbd_label_4" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -306,54 +344,125 @@
         </tbody>
       </table>
     </section>
+
     <section>
-        <h3 id="kbd_label_3">Menu</h3>
-        <table aria-labelledby="kbd_label_3" class="def">
-          <thead>
-            <tr>
-              <th>Key</th>
-              <th>Function</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
-              <td>
-                Select the menu item.
-              </td>
-            </tr>
-            <tr>
-              <th><kbd>Down Arrow</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to the next menu item.</li>
-                  <li>If the last menu item has focus, focus moves to the first menu item.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <th><kbd>Up Arrow</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to the previous menu item.</li>
-                  <li>If the first menu item has focus, focus moves to the last menu item.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-                <th>
-                  <kbd>ESC</kbd>,<br><kbd>Left Arrow</kbd>,<br><kbd>Right Arrow</kbd>
-                </th>
-                <td>
-                  <ul>
-                    <li>Close the menu.</li>
-                    <li>Move focus back to the menu button.</li>
-                  </ul>
-                </td>
-              </tr>
-          </tbody>
-        </table>
-      </section>
+      <h3 id="kbd_label_5">Menu</h3>
+      <p>The menu changes the font family in the <code>textarea</code>.</p>
+      <table aria-labelledby="kbd_label_5" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
+            <td>
+              Select the menu item.
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Down Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus to the next menu item.</li>
+                <li>If the last menu item has focus, focus moves to the first menu item.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Up Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus to the previous menu item.</li>
+                <li>If the first menu item has focus, focus moves to the last menu item.</li>
+              </ul>
+            </td>
+          </tr>
+        <tr>
+          <th>
+            <kbd>ESC</kbd>,<br><kbd>Left Arrow</kbd>,<br><kbd>Right Arrow</kbd>
+          </th>
+          <td>
+            <ul>
+              <li>Close the menu.</li>
+              <li>Move focus back to the menu button.</li>
+            </ul>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h3 id="kbd_label_6">Spin Button</h3>
+      <p>The spinbutton in the toolbar changes the size of the font in the <code>textarea</code>.
+      <table aria-labelledby="kbd_label_6" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Down Arrow</kbd></th>
+            <td>
+              Decreases the font size of the text in the <code>textarea</code>.
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Up Arrow</kbd></th>
+            <td>
+              Increases the font size of the text in the <code>textarea</code>.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </section>
+
+    <section>
+      <h3 id="kbd_label_7">Checkbox</h3>
+      <p>The checkbox in the toolbar changes the foreground and background colors in the <code>textarea</code>.
+      <table aria-labelledby="kbd_label_7" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Return</kbd>, <kbd>Space</kbd></th>
+            <td>
+              Toggle the state of the checkbox.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h3 id="kbd_label_8">Link</h3>
+      <table aria-labelledby="kbd_label_7" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Return</kbd>, <kbd>Space</kbd></th>
+            <td>
+              Activate the link.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </section>
 
   <section>
