Apply role="none" to <li> elements in menubar
fixes #930

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -50,7 +50,7 @@
     <div id="ex1">
       <nav aria-label="Mythical University">
         <ul id="menubar1" role="menubar" aria-label="Mythical University">
-          <li>
+          <li role="none">
             <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
             <ul role="menu" aria-label="About">
               <li role="none">
@@ -90,7 +90,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li role="none">
             <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
             <ul role="menu" aria-label="Admissions">
               <li role="none">
@@ -125,7 +125,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li role="none">
             <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
             <ul role="menu" aria-label="Academics">
               <li role="none">
