--- a/examples/landmarks/resources.html
+++ b/examples/landmarks/resources.html
@@ -64,6 +64,7 @@
                           <h2>Tools</h2>
 
                           <ul>
+                            <li><a href="http://matatk.agrip.org.uk/landmarks/">Landmarks Browser Extension</a></li>
                             <li><a href="http://accessibility-bookmarklets.org/">Accessibility Bookmarklets: Landmark Bookmarklet</a></li>
                             <li><a href="http://whatsock.com/training/matrices/visual-aria.htm">The Visual ARIA Bookmarklet</a></li>
                             <li><a href="http://paypal.github.io/skipto/">SkipTo, version 2.0</a> (PayPal)</li>
